resources/assets/less/uniform-builder.less
/* ... */
div.add_delete_color_stop {
    text-align: center;
}

div.arrow {
    display: none;
}

div.options_panel_section.ubColorPicker {

  border-top: 1px solid @border_color;
  border-bottom: 1px solid @border_color;

}

.color_stop_label {

    width: 10% !important;
    padding-left: 0px !important;
    margin-left: -10px;

}

.pattern_color_picker_container {

    text-align: center;

}

.color_stop_label {

    width: 10% !important;
    padding-left: 0px !important;
    margin-left: -10px;

}

.color_stops_container {

    text-align: center;

}

div.mascot_drop, div.logo_drop, div.font_style_drop, div.color_drop, div.accent_drop, div.other_color_dropdown, {

    background-color: @main_highlight;
    color: white;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 10px;
    border-radius: 0px;
    width: 100%;
    text-align: center;
    
    i.fa {

        float: right;
        padding-top: 3px;

    }

}

div.logo_drop.btn.focus, div.logo_drop.btn:focus, div.logo_drop.btn:hover {

    color: white;

}

div.mascot_drop.btn.focus, div.mascot_drop.btn:focus, div.mascot_drop.btn:hover {

    color: white;

}

div.mascot_color_picker_container {
    text-align: center;
}

.rotation_slider {
        margin: 0 auto;
        height: 155px;
}

img.logo-preview {

    border: 1px solid white;
    display: block;
    width: 100px;
    height: 100px;
    margin: 10px auto;
    background-size: cover;

}

div.logo-container {

    padding-top: 10px;

}

div.logo-controls {

    display: block;
    width: 100%;
    padding: 30px;
    border: solid 1px #acacac;

}


div.drop-content {

    background-color: @main_highlight;
    color: white;
    padding: 7px;
    width: 477px;
    overflow-x: hidden;
    overflow-y: scroll;
    max-height: 300px;

    div.row div {
        text-align: center;
    }

}

a.font-selector {
    cursor: pointer;
    font-size: 18px;
}

a.font-selector:hover {

    font-weight: bold;
    border-bottom: solid 3px #ffffff;
    padding-bottom: 7px;

}

input.applications.player_number {
    width: 100%;
}

div.ub_label {
    
    font-weight: bold;

}

a.color-selector, a.other-color-selector {
    
    display: block;
    padding: 10px;
    cursor: pointer;
    text-decoration: none;
    padding-bottom: 10px;

}

a.color-selector:hover {

    font-weight: bold;
    border-bottom: solid 3px #ffffff;
    padding-bottom: 7px;
    
}

div.flip-container {
    float: right;
}

img.accent_element {

    width: 70px;

}

.btn.ub {
    
    border: solid 1px #acacac;
    color: @main_highlight;
    margin-right: 7px;
    border-radius: 0px;

}

.btn.ub.active {
    
    border: solid 1px #acacac;
    background-color: @main_highlight;
    color: #ffffff;
    margin-right: 7px;
    border-radius: 0px;

}

div.colors_container {
    
    padding-top: 20px;
    padding-bottom: 20px;
    border: solid 1px #acacac;
    margin-top: -1px;
    margin-bottom: 10px;

}

div.colors_container.colors, div.colors_container.patterns {
    
    padding: 20px;
    
}

